--- a/.github/workflows/rsync4aarch64CC.yml
+++ b/.github/workflows/rsync4aarch64CC.yml
@@ -59,7 +59,7 @@ jobs:
         run: |
           GNUPGHOME="$(mktemp -d)"
           export GNUPGHOME
-          gpg --batch --keyserver hkps://keyserver.ubuntu.com:443 --recv-keys 0048C8B026D4C96F0E589C2F6C859FB14B96A8C5
+          gpg --batch --keyserver keyserver.ubuntu.com --recv-keys 0048C8B026D4C96F0E589C2F6C859FB14B96A8C5
 
       - name: Download source code
         run: |
