Moved gpg preparation to be persistent within step

--- a/.github/workflows/rsync4aarch64CC.yml
+++ b/.github/workflows/rsync4aarch64CC.yml
@@ -55,14 +55,18 @@ jobs:
           echo "Latest rsync version: $version"
           echo "RSYNC_VERSION=$version" >> $GITHUB_ENV
 
-      - name: Prepare gpg
-        run: |
-          GNUPGHOME="$(mktemp -d)"
-          export GNUPGHOME
-          gpg --batch --keyserver keyserver.ubuntu.com --recv-keys 0048C8B026D4C96F0E589C2F6C859FB14B96A8C5
+      # - name: Prepare gpg
+      #   run: |
+      #     mkdir keys
+      #     GNUPGHOME=./keys
+      #     export GNUPGHOME
+      #     gpg --batch --keyserver keyserver.ubuntu.com --recv-keys 0048C8B026D4C96F0E589C2F6C859FB14B96A8C5
 
       - name: Download source code
         run: |
+          GNUPGHOME="$(mktemp -d)"
+          export GNUPGHOME
+          gpg --batch --keyserver hkps://keyser.ubuntu.com:443 --recv-keys 0048C8B026D4C96F0E589C2F6C859FB14B96A8C5
           curl -sO "https://download.samba.org/pub/rsync/src/rsync-${{ env.RSYNC_VERSION }}.tar.gz"
           curl -sO "https://download.samba.org/pub/rsync/src/rsync-${{ env.RSYNC_VERSION }}.tar.gz.asc"
           gpg --batch --verify "rsync-${{ env.RSYNC_VERSION }}.tar.gz.asc" "rsync-${{ env.RSYNC_VERSION }}.tar.gz"
